Adding dependabot.yml for improved versions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - .:/app
+      - .:/assignment
     environment:
       - PYTHONUNBUFFERED=1
